--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             margin: 0;
             font-family: sans-serif;
             font-size: 2rem;
-            background-color: #f9f9f9;
+            background-color: #494d4e;
         }
     </style>
 </head>
